# pepper-fsm-controller

./: .gitignore  CMakeLists.txt  README.md
etc/: PepperFSMController.in.yaml
launch/: display.launch  mc_pepper_fsm_display.rviz  mc_pepper_fsm_withHuman_display.rviz
src/: CMakeLists.txt  PepperFSMController.cpp  PepperFSMController.h  api.h  lib.cpp
src/constraints/: BoundedAccelerationConstr.cpp  BoundedAccelerationConstr.h
src/states/: CMakeLists.txt  NavigateToHuman.cpp  NavigateToHuman.h  StandStraight.cpp  StandStraight.h
src/tasks/: CoMRelativeBodyTask.cpp  CoMRelativeBodyTask.h
